--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark Fantasy - Real-Time Arena</title>
-    <link rel="stylesheet" href="styles/main.css?v=2.0">
+    <!-- ✅ Chemin absolu depuis la racine -->
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚔️</text></svg>">
 </head>
 <body>
@@ -124,6 +125,7 @@
     <div id="card-tooltip" class="encyclopedia-tooltip" style="display: none; position: fixed; z-index: 1000; left: 50%; top: 50%; transform: translate(-50%, -50%);">
     </div>
 
-    <script type="module" src="src/main.js"></script>
+    <!-- ✅ Chemin absolu depuis la racine -->
+    <script type="module" src="./src/main.js"></script>
 </body>
 </html>
